United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6875619 CTW fails with /hotspot/src/share/vm/opto/type.hpp:1133
6875619 : CTW fails with /hotspot/src/share/vm/opto/type.hpp:1133

Details
Type:
Bug
Submit Date:
2009-08-25
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
x86
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs17

Related Reports
Backport:
Backport:

Sub Tasks

Description
Note: issue is reproducible with both compilers.
It reproduced on linux,solaris, i586, amd64, sparc. I did not check windows.

The jar: /net/vmsqe.russia/export/testbase/ctw/jars/ibiblio/maven2/org/parancoe/parancoe-yaml/0.3.4/parancoe-yaml-0.3.4.jar


To reproduce (with jdk6u18, on vmsqe-core2q-15.russia ) run:
-->/net/vmsqe.russia/export/jdk/re/6u18/promoted/ea/b01/binaries/linux-i586/fastdebug/bin/java -Xcomp -server  -XX:-ShowMessageBoxOnError     -Xverify:all  -XX:+CompileTheWorld -Xbootclasspath/p:/net/vmsqe.russia/export/testbase/ctw/build/../jars/ibiblio/maven2/org/parancoe/parancoe-yaml/0.3.4/parancoe-yaml-0.3.4.jar
VM option '-ShowMessageBoxOnError'
VM option '+CompileTheWorld'
Warning:  Cannot open log file: hotspot.log
Warning:  Forcing option -XX:LogFile=/tmp//hs_pid20027.log
CompileTheWorld : Compiling all classes in /net/vmsqe.russia/export/testbase/ctw/jars/ibiblio/maven2/org/parancoe/parancoe-yaml/0.3.4/parancoe-yaml-0.3.4.jar

CompileTheWorld (1) : org/parancoe/yaml/YamlParserException
CompileTheWorld (2) : org/parancoe/yaml/YamlDecoder
CompileTheWorld (3) : org/parancoe/yaml/SpecialTreatmentManager$Holder
CompileTheWorld (4) : org/parancoe/yaml/YamlConfig
CompileTheWorld (5) : org/parancoe/yaml/YamlOperations
CompileTheWorld (6) : org/parancoe/yaml/YamlEncoder
CompileTheWorld (7) : org/parancoe/yaml/YamlEncoder$NameGenerator
CompileTheWorld (8) : org/parancoe/yaml/YamlDecoder$Stream
CompileTheWorld (9) : org/parancoe/yaml/SpecialTreatmentManager$DefaultSpecialTreatment
CompileTheWorld (10) : org/parancoe/yaml/SpecialTreatmentManager$ColorSpecialTreatment
CompileTheWorld (11) : org/parancoe/yaml/NoneState
CompileTheWorld (12) : org/parancoe/yaml/State
CompileTheWorld (13) : org/parancoe/yaml/YamlStream
CompileTheWorld (14) : org/parancoe/yaml/MapState
CompileTheWorld (15) : org/parancoe/yaml/Yaml
CompileTheWorld (16) : org/parancoe/yaml/ReflectionUtil
CompileTheWorld (17) : org/parancoe/yaml/parser/YamlParserRefEvent
CompileTheWorld (18) : org/parancoe/yaml/parser/ParserReader
CompileTheWorld (19) : org/parancoe/yaml/parser/ParserEvent
CompileTheWorld (20) : org/parancoe/yaml/parser/YamlParserEvent
CompileTheWorld (21) : org/parancoe/yaml/parser/YamlCharacter
CompileTheWorld (22) : org/parancoe/yaml/parser/YamlParser
CompileTheWorld (23) : org/parancoe/yaml/parser/SyntaxException
CompileTheWorld (24) : org/parancoe/yaml/ListState
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/type.hpp:1133
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/BUILD_AREA/jdk6_18/hotspot/src/share/vm/opto/type.hpp:1133), pid=20027, tid=1873992608
#  Error: assert(_base == AryPtr,"Not an array pointer")
#
# JRE version: 6.0_18-b01
# Java VM: Java HotSpot(TM) Server VM (16.0-b08-fastdebug compiled mode linux-x86 )
# An error report file with more information is saved as:
# /tmp/hs_err_pid20027.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 1873992608
Dumping core ...
Aborted

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/0f1c19b7a52d
                                     
2009-09-08
PUBLIC COMMENTS

Problem:
GraphKit::load_array_length() tries to cast type of new allocated
array to TypeAryPtr. It fails since it is reflection allocation
and type is Object.

Solution:
Cast to TypeOopPtr which is the parameter type of
make_ideal_length() method.
                                     
2009-09-08
EVALUATION

This doesn't fail with client and this message only can come from C2, so refiling.
                                     
2009-08-25



Hardware and Software, Engineered to Work Together