6875619: CTW fails with /hotspot/src/share/vm/opto/type.hpp

In load_array_length() cast array's type to TypeOopPtr when calling make_ideal_length() method.

Reviewed-by: never